--- a/oko_project/bitrix_calc/templates/calculation_add.html
+++ b/oko_project/bitrix_calc/templates/calculation_add.html
@@ -809,7 +809,7 @@ function filterClients() {
 
 // Добавляем обработчик для кнопки создания калькуляции
 document.querySelector('.submit-button').addEventListener('click', function () {
-
+        console.log(dealId_from_bx)
         const calculationName = document.getElementById('calculationName').value;
 
         if (!calculationName) {
